# Brezel

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  PROJECT_STATUS.md  README.md
designdocs/: HURS.md  HURS2.md
include/Brezel/App/: Application.hpp
include/Brezel/Command/: Command.hpp  CommandStack.hpp  CommandStackVisitor.hpp  PropertyCommand.hpp
include/Brezel/Console/: Console.hpp  InteractiveConsole.hpp  SearchVisitor.hpp
include/Brezel/Core/: ComponentRegistry.hpp  CoreComponents.hpp  Entity.hpp  EntityReference.hpp  Project.hpp  UUID.hpp  UUIDProvider.hpp
include/Brezel/Foundation/: Signal.hpp  StringID.hpp
include/Brezel/Reflection/: Parameter.hpp  Visitor.hpp
include/Brezel/Serialization/: ConsoleVisitor.hpp  DeserializationValidation.hpp  EntityReferenceLinker.hpp  XmlCommon.hpp  XmlDeserializer.hpp  XmlSerializer.hpp
include/framework/app/: Application.hpp
include/framework/commands/: Command.hpp  CommandStack.hpp  CommandStackVisitor.hpp  PropertyCommand.hpp
include/framework/console/: Console.hpp  InteractiveConsole.hpp  SearchVisitor.hpp
include/framework/core/: ComponentRegistry.hpp  CoreComponents.hpp  Entity.hpp  EntityReference.hpp  Hierarchy.hpp  Object.hpp  Project.hpp  UUID.hpp  UUIDProvider.hpp  Visitor.hpp
include/framework/foundation/: Signal.hpp
include/framework/params/: Parameter.hpp
include/framework/serialization/: ComponentRegistry.hpp  ConsoleVisitor.hpp  DeserializationValidation.hpp  EntityReferenceLinker.hpp  XmlCommon.hpp  XmlDeserializer.hpp  XmlSerializer.hpp  XmlVisitors.hpp
src/: main.cpp
(+1 files in other folders)
